Built full-stack AI Document Assistant with RAG, chat UI, and fallback retrieval